# Tiktok-ads-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/humanizer/: SKILL.md
.github/workflows/: ad-lookup.yml  daily-report.yml  exclude-pangle.yml  monthly-report.yml  send-notification.yml  verify-secrets.yml  weekly-report.yml
.state/: creative_registry.json  optimization_log.json
.state/daily_snapshots/: 2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-05-03.json
.state/monthly_snapshots/: 2026-03.json
.state/weekly_snapshots/: 2026-W16.json
scripts/: tiktok-auth-bootstrap.py
src/tiktok_ads_agent/: __init__.py
src/tiktok_ads_agent/agent/: __init__.py
src/tiktok_ads_agent/api/: __init__.py
src/tiktok_ads_agent/cli/: main.py
src/tiktok_ads_agent/core/: __init__.py  client.py  settings.py
src/tiktok_ads_agent/creative/: __init__.py
src/tiktok_ads_agent/models/: __init__.py  schemas.py
src/tiktok_ads_agent/notifications/: __init__.py  telegram.py
src/tiktok_ads_agent/reports/: __init__.py  common.py  daily.py  monthly.py  placements.py  weekly.py
src/tiktok_ads_agent/state/: __init__.py  persistence.py
